src/test/deca/syntax/valid/affect_init.deca
{
int x=8;
float y=4.0;
boolean b=true;
println("Kaamelott");
}