src/test/deca/syntax/invalid/twoDots.deca
// : au lieu de ;

{
    int a = 4;
    float b:
    boolean x = true;
}